--- a/index.html
+++ b/index.html
@@ -582,11 +582,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 copyright">
-                        <p>Copyright &copy; <a href='#'>Vishal kumar</a>. All Rights Reserved</p>
+                        <p>Copyright &copy; <a href='#'></a>. All Rights Reserved</p>
                     </div>
 
                     <div class="col-md-6 template-by">
-                        <p>Template By <a href="#">Vishal kumar</a></p>
+                        <p>Template By <a href="#"></a></p>
                     </div>
                 </div>
             </div>
